--- a/docs/20160730-return-255.md
+++ b/docs/20160730-return-255.md
@@ -1,3 +1,5 @@
+#### 为什么程序return -1或exit(-1)而获取到的值是255
+
 今天用python获取C语言编写的可执行程序的返回值，发现一个问题，发现程序退出的时候"return -1;"，而获取到的返回值是255。为啥不是-1呢？
 
 查了一下[资料](http://www.gnu.org/software/libc/manual/html_node/Exit-Status.html)，确定原因是**系统用8bits的无符号数标识退出状态，所以退出的状态值为0至255**。而-1用8bits的无符号数的值就是255。
