--- a/docs/20160806-macro.md
+++ b/docs/20160806-macro.md
@@ -1,3 +1,5 @@
+## C语言的宏能干些什么
+
 在使用宏的时候，要切记，**宏定义，本质就是“替换”**。它没有进行逻辑运算，仅仅是在编译器进行“预处理”的时候被展开，**进行“简单暴力”的文本替换操作**。
 
 OK，宏的本质就这么简单，文本替换而已，但也是因为它简单暴力，使它成为“双刃剑”。在下面的文章里，我会陆续介绍宏的常见使用场景。
